--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-style: italic;
-  background: url(/img/cats_background.jpg) no-repeat;
+  background: url(./img/cats_background.jpg) no-repeat;
   display: grid;
   grid-template-columns: 120px 900px;
   height: 100vh;
@@ -35,19 +35,19 @@ body {
   box-sizing: border-box;
 }
 
-.btn__1 i {
+.btn__1 {
   align-items: center;
   font-size: 60px;
   color: rgb(246, 127, 0);
 }
 
-.btn__2 i {
+.btn__2 {
   align-items: center;
   font-size: 60px;
   color: rgba(255, 0, 0, 0.779);
 }
 
-.btn__3 i {
+.btn__3 {
   align-items: center;
   font-size: 60px;
   color: rgba(5, 147, 0, 0.779);
@@ -55,13 +55,13 @@ body {
 
 .btn p {
   margin-top: 5px;
-  font-size: 16px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 600;
   text-align: center;
 }
 
 .btn:hover {
-  transform: scale(1.05, 1.05);
+  transform: scale(1.08, 1.08);
   transition: 0.1s linear;
   cursor: pointer;
 }
@@ -112,12 +112,12 @@ body {
 
 .popup-wrapper {
   position: fixed;
-  background-color: #2224;
+  background-color: transparent;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(3px);
   display: none;
   justify-content: center;
   align-items: center;
@@ -125,7 +125,7 @@ body {
 
 .popup {
   padding: 30px;
-  background-color: #ffffff;
+  background-color: #fdc8c8;
   border-radius: 8px;
   width: 350px;
   box-sizing: border-box;
@@ -152,7 +152,7 @@ body {
 }
 
 .popup > .close:hover {
-  transform: rotate(45deg) scale(1.06, 1.06);
+  transform: rotate(45deg) scale(1.08, 1.08);
 }
 
 .popup h2 {
