--- a/style.css
+++ b/style.css
@@ -36,28 +36,29 @@ body {
 }
 
 .btn__1 {
-  align-items: center;
+  text-align: center;
   font-size: 60px;
   color: rgb(246, 127, 0);
 }
 
 .btn__2 {
-  align-items: center;
+  text-align: center;
   font-size: 60px;
   color: rgba(255, 0, 0, 0.779);
 }
 
 .btn__3 {
-  align-items: center;
+  text-align: center;
   font-size: 60px;
   color: rgba(5, 147, 0, 0.779);
 }
 
 .btn p {
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 600;
   text-align: center;
+  align-items: center;
 }
 
 .btn:hover {
@@ -125,7 +126,7 @@ body {
 
 .popup {
   padding: 30px;
-  background-color: #fdc8c8;
+  background-color: #ffe0bd;
   border-radius: 8px;
   width: 350px;
   box-sizing: border-box;
