--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   font-style: italic;
   background: url(./img/cats_background.jpg) no-repeat;
   display: grid;
+  align-items: start;
+  justify-content: center;
   grid-template-columns: 120px 900px;
   height: 100vh;
   box-sizing: border-box;
@@ -17,7 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 30px 0 30px;
+  padding: 30px 30px 30px 30px;
   gap: 20px;
 }
 
@@ -68,10 +70,11 @@ body {
 }
 
 .card {
-  background-color: #bfd9e8;
+  background-color: #cce5f3;
   font-weight: 500;
   height: 140px;
   border-radius: 8px;
+  border: #6d6e72 1px solid;
   padding: 15px;
   display: grid;
   grid-template-columns: 70px auto;
@@ -82,6 +85,7 @@ body {
   transform: scale(1.04, 1.04);
   transition: 0.1s linear;
   cursor: pointer;
+  box-shadow: 2px 2px 20px rgba(109, 110, 114, 0.8);
 }
 
 .pic {
